--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
       "test": "tests"
    },
    "scripts": {
-      "build": "webpack",
-      "start": "webpack serve",
+      "build": "tsc",
+      "start": "nodemon app.js",
       "test": "jest"
    },
    "keywords": [
@@ -23,21 +23,13 @@
       "@babel/preset-typescript": "^7.23.3",
       "babel-jest": "^29.7.0",
       "babel-loader": "^9.1.3",
-      "clean-webpack-plugin": "^4.0.0",
-      "css-loader": "^6.10.0",
-      "css-minimizer-webpack-plugin": "^6.0.0",
-      "html-webpack-plugin": "^5.6.0",
       "jest": "^29.7.0",
-      "mini-css-extract-plugin": "^2.8.1",
-      "sass": "^1.71.1",
-      "sass-loader": "^14.1.1",
-      "style-loader": "^3.3.4",
-      "ts-loader": "^9.5.1",
-      "webpack": "^5.90.3",
-      "webpack-cli": "^5.1.4",
-      "webpack-dev-server": "^5.0.2"
+      "nodemon": "^3.1.0",
+      "ts-loader": "^9.5.1"
    },
    "dependencies": {
-      "@types/jest": "^29.5.12"
+      "@types/jest": "^29.5.12",
+      "cors": "^2.8.5",
+      "express": "^4.19.2"
    }
 }
