--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
    "compilerOptions": {
 	  "target": "ES6",
 	  "module": "ES6",
-	  "rootDir": "./src",
-	  "outDir": "./dist",
+	  "rootDir": "./src/ts",
+	  "outDir": "./dist/js",
 	  "removeComments": true,
 	  "noEmitOnError": true,
 	  "esModuleInterop": true,
@@ -14,5 +14,6 @@
 	  "noUnusedLocals": true,
 	  "allowUnreachableCode": false,
 	  "strictNullChecks": true
-   }
+   },
+   "include": ["src/ts"]
 }
