--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
       "test": "tests"
    },
    "scripts": {
-      "build": "tsc",
-      "start": "nodemon app.js",
-      "test": "jest"
+      "compile:ts": "npx tsc",
+      "compile:sass": "sass ./src/scss:./dist/css",
+      "build": "npm run compile:ts && npm run compile:sass && cd ./src && cp -R $(ls | grep '[^./ts]') ../dist",
+      "start:run": "nodemon app.js",
+      "start:build": "npm run build && npm run start:run",
+      "clean:build": "cd ./dist && rm -rf .js",
+      "clean:all": "rm -rf ./dist"
    },
    "keywords": [
       "webpack",
@@ -18,18 +22,11 @@
    "author": "me",
    "license": "MIT",
    "devDependencies": {
-      "@babel/core": "^7.24.0",
-      "@babel/preset-env": "^7.24.0",
-      "@babel/preset-typescript": "^7.23.3",
-      "babel-jest": "^29.7.0",
-      "babel-loader": "^9.1.3",
-      "jest": "^29.7.0",
       "nodemon": "^3.1.0",
-      "ts-loader": "^9.5.1"
+      "sass": "^1.83.0",
+      "typescript": "^5.7.2"
    },
    "dependencies": {
-      "@types/jest": "^29.5.12",
-      "cors": "^2.8.5",
       "express": "^4.19.2"
    }
 }
