--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
    "compilerOptions": {
 	  "target": "ES6",
 	  "module": "ES6",
-	  "rootDir": "./src/ts",
-	  "outDir": "./dist/js",
+	  "rootDir": "./",
+	  "outDir": "./dist",
 	  "removeComments": true,
 	  "noEmitOnError": true,
 	  "esModuleInterop": true,
@@ -15,5 +15,6 @@
 	  "allowUnreachableCode": false,
 	  "strictNullChecks": true
    },
-   "include": ["src/ts"]
+   "include": ["src/ts", "Random"],
+   "exclude": ["node_modules", "dist", "Random/tests/*.ts"]
 }
