--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
       "test": "tests"
    },
    "scripts": {
-	  "postinstall": "git clone git@github.com:micrjames/Random",
+      "postinstall": "git clone git@github.com:micrjames/Random",
       "compile:ts": "npx tsc",
-	  "postcompile:ts": "mv ./dist/src/ts ./dist/src/js",
+      "postcompile:ts": "mv ./dist/src/ts ./dist/src/js",
       "compile:sass": "sass ./src/scss:./dist/css",
       "build": "npm run compile:ts && npm run compile:sass && cd ./src && cp -R $(ls | grep '[^./ts|./scss]') ../dist",
       "start:run": "nodemon app.js",
@@ -29,6 +29,7 @@
       "typescript": "^5.7.2"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "express": "^4.19.2"
    }
 }
