--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-   "name": "perceptron",
+   "name": "webpack-starter",
    "version": "1.0.0",
-   "description": "An implementation of a Perceptron. ",
+   "description": "A webpack starter framework",
    "main": "index.js",
    "directories": {
       "test": "tests"
    },
    "scripts": {
-      "postinstall": "git clone git@github.com:micrjames/Random",
-      "compile:ts": "npx tsc",
-      "postcompile:ts": "mv ./dist/src/ts ./dist/src/js",
-      "compile:sass": "sass ./src/scss:./dist/css",
-      "build": "npm run compile:ts && npm run compile:sass && cd ./src && cp -R $(ls | grep '[^./ts|./scss]') ../dist",
-      "start:run": "nodemon app.js",
-      "start:build": "npm run build && npm run start:run",
-      "clean:build": "cd ./dist && rm -rf ./js",
-      "clean:all": "rm -rf ./dist"
+      "build": "webpack",
+      "start": "webpack serve",
+      "test": "jest"
    },
    "keywords": [
       "webpack",
@@ -24,12 +18,34 @@
    "author": "me",
    "license": "MIT",
    "devDependencies": {
-      "nodemon": "^3.1.0",
-      "sass": "^1.83.0",
-      "typescript": "^5.7.2"
+      "@babel/core": "^7.24.0",
+      "@babel/preset-env": "^7.24.0",
+      "@babel/preset-typescript": "^7.23.3",
+      "babel-jest": "^29.7.0",
+      "babel-loader": "^9.1.3",
+      "clean-webpack-plugin": "^4.0.0",
+      "css-loader": "^6.10.0",
+      "css-minimizer-webpack-plugin": "^6.0.0",
+      "html-webpack-plugin": "^5.6.0",
+      "jest": "^29.7.0",
+      "mini-css-extract-plugin": "^2.8.1",
+      "sass": "^1.71.1",
+      "sass-loader": "^14.1.1",
+      "style-loader": "^3.3.4",
+      "ts-loader": "^9.5.1",
+      "webpack": "^5.90.3",
+      "webpack-cli": "^5.1.4",
+      "webpack-dev-server": "^5.0.2",
+      "@testing-library/dom": "^10.1.0",
+      "@testing-library/jest-dom": "^6.4.6",
+      "@types/cors": "^2.8.17",
+      "@types/jest": "^29.5.12",
+      "@types/jsdom": "^21.1.7",
+      "ts-node-dev": "^2.0.0"
    },
    "dependencies": {
       "cors": "^2.8.5",
-      "express": "^4.19.2"
+      "dotenv": "^16.4.5",
+      "jsdom": "^24.1.0"
    }
 }
