--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
       "@babel/core": "^7.24.0",
       "@babel/preset-env": "^7.24.0",
       "@babel/preset-typescript": "^7.23.3",
+      "@testing-library/dom": "^10.1.0",
+      "@testing-library/jest-dom": "^6.4.6",
+      "@types/cors": "^2.8.17",
+      "@types/jest": "^29.5.12",
+      "@types/jsdom": "^21.1.7",
+      "@types/node": "^22.13.1",
       "babel-jest": "^29.7.0",
       "babel-loader": "^9.1.3",
       "clean-webpack-plugin": "^4.0.0",
@@ -33,17 +39,13 @@
       "sass-loader": "^14.1.1",
       "style-loader": "^3.3.4",
       "ts-loader": "^9.5.1",
+      "ts-node-dev": "^2.0.0",
       "webpack": "^5.90.3",
       "webpack-cli": "^5.1.4",
-      "webpack-dev-server": "^5.0.2",
-      "@testing-library/dom": "^10.1.0",
-      "@testing-library/jest-dom": "^6.4.6",
-      "@types/cors": "^2.8.17",
-      "@types/jest": "^29.5.12",
-      "@types/jsdom": "^21.1.7",
-      "ts-node-dev": "^2.0.0"
+      "webpack-dev-server": "^5.0.2"
    },
    "dependencies": {
+      "canvas": "^2.11.2",
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
       "jsdom": "^24.1.0"
